@@ -15,6 +15,7 @@
  */
 package com.android.adservices.service.measurement.registration;
 
+import static com.android.adservices.service.measurement.PrivacyParams.MAX_DISTINCT_WEB_DESTINATIONS_IN_SOURCE_REGISTRATION;
 import static com.android.adservices.service.measurement.PrivacyParams.MAX_INSTALL_ATTRIBUTION_WINDOW;
 import static com.android.adservices.service.measurement.PrivacyParams.MAX_POST_INSTALL_EXCLUSIVITY_WINDOW;
 import static com.android.adservices.service.measurement.PrivacyParams.MAX_REPORTING_REGISTER_SOURCE_EXPIRATION_IN_SECONDS;
@@ -29,7 +30,6 @@ import static com.android.adservices.service.stats.AdServicesStatsLog.AD_SERVICE
 import static java.lang.Math.min;
 
 import android.annotation.NonNull;
-import android.annotation.Nullable;
 import android.content.Context;
 import android.net.Uri;
 
@@ -37,12 +37,10 @@ import com.android.adservices.LogUtil;
 import com.android.adservices.data.enrollment.EnrollmentDao;
 import com.android.adservices.service.Flags;
 import com.android.adservices.service.FlagsFactory;
-import com.android.adservices.service.measurement.AsyncRegistration;
+import com.android.adservices.service.common.AllowLists;
 import com.android.adservices.service.measurement.EventSurfaceType;
 import com.android.adservices.service.measurement.MeasurementHttpClient;
 import com.android.adservices.service.measurement.Source;
-import com.android.adservices.service.measurement.util.AsyncFetchStatus;
-import com.android.adservices.service.measurement.util.AsyncRedirect;
 import com.android.adservices.service.measurement.util.Enrollment;
 import com.android.adservices.service.measurement.util.UnsignedLong;
 import com.android.adservices.service.measurement.util.Web;
@@ -60,10 +58,12 @@ import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
 /**
@@ -74,8 +74,8 @@ import java.util.concurrent.TimeUnit;
 public class AsyncSourceFetcher {
 
     private static final long ONE_DAY_IN_SECONDS = TimeUnit.DAYS.toSeconds(1);
-    private final String mDefaultAndroidAppScheme = "android-app";
-    private final String mDefaultAndroidAppUriPrefix = mDefaultAndroidAppScheme + "://";
+    private static final String DEFAULT_ANDROID_APP_SCHEME = "android-app";
+    private static final String DEFAULT_ANDROID_APP_URI_PREFIX = DEFAULT_ANDROID_APP_SCHEME + "://";
     private final MeasurementHttpClient mNetworkConnection = new MeasurementHttpClient();
     private final EnrollmentDao mEnrollmentDao;
     private final Flags mFlags;
@@ -96,23 +96,17 @@ public class AsyncSourceFetcher {
     }
 
     private boolean parseCommonSourceParams(
-            @NonNull JSONObject json,
-            @NonNull Source.SourceType sourceType,
-            @Nullable Uri appDestinationFromRequest,
-            @Nullable Uri webDestinationFromRequest,
-            long sourceEventTime,
-            boolean shouldValidateDestinationWebSource,
-            boolean shouldOverrideDestinationAppSource,
-            Source.Builder result,
-            boolean isWebSource)
+            JSONObject json,
+            AsyncRegistration asyncRegistration,
+            Source.Builder builder,
+            String enrollmentId)
             throws JSONException {
-        final boolean hasRequiredParams =
-                hasRequiredParams(json, shouldValidateDestinationWebSource);
-        if (!hasRequiredParams) {
+        if (!hasRequiredParams(json)) {
             throw new JSONException(
                     String.format(
                             "Expected %s and a destination", SourceHeaderContract.SOURCE_EVENT_ID));
         }
+        long sourceEventTime = asyncRegistration.getRequestTime();
         UnsignedLong eventId = new UnsignedLong(0L);
         if (!json.isNull(SourceHeaderContract.SOURCE_EVENT_ID)) {
             try {
@@ -121,7 +115,7 @@ public class AsyncSourceFetcher {
                 LogUtil.d(e, "parseCommonSourceParams: parsing source_event_id failed.");
             }
         }
-        result.setEventId(eventId);
+        builder.setEventId(eventId);
         long expiry;
         if (!json.isNull(SourceHeaderContract.EXPIRY)) {
             expiry =
@@ -129,13 +123,14 @@ public class AsyncSourceFetcher {
                             json.getLong(SourceHeaderContract.EXPIRY),
                             MIN_REPORTING_REGISTER_SOURCE_EXPIRATION_IN_SECONDS,
                             MAX_REPORTING_REGISTER_SOURCE_EXPIRATION_IN_SECONDS);
-            if (sourceType == Source.SourceType.EVENT) {
+            if (asyncRegistration.getSourceType() == Source.SourceType.EVENT) {
                 expiry = roundSecondsToWholeDays(expiry);
             }
         } else {
             expiry = MAX_REPORTING_REGISTER_SOURCE_EXPIRATION_IN_SECONDS;
         }
-        result.setExpiryTime(sourceEventTime + TimeUnit.SECONDS.toMillis(expiry));
+        builder.setExpiryTime(
+                asyncRegistration.getRequestTime() + TimeUnit.SECONDS.toMillis(expiry));
         long eventReportWindow;
         if (!json.isNull(SourceHeaderContract.EVENT_REPORT_WINDOW)) {
             eventReportWindow =
@@ -148,7 +143,8 @@ public class AsyncSourceFetcher {
         } else {
             eventReportWindow = expiry;
         }
-        result.setEventReportWindow(sourceEventTime + TimeUnit.SECONDS.toMillis(eventReportWindow));
+        builder.setEventReportWindow(
+                sourceEventTime + TimeUnit.SECONDS.toMillis(eventReportWindow));
         long aggregateReportWindow;
         if (!json.isNull(SourceHeaderContract.AGGREGATABLE_REPORT_WINDOW)) {
             aggregateReportWindow =
@@ -161,17 +157,17 @@ public class AsyncSourceFetcher {
         } else {
             aggregateReportWindow = expiry;
         }
-        result.setAggregatableReportWindow(
+        builder.setAggregatableReportWindow(
                 sourceEventTime + TimeUnit.SECONDS.toMillis(aggregateReportWindow));
         if (!json.isNull(SourceHeaderContract.PRIORITY)) {
-            result.setPriority(json.getLong(SourceHeaderContract.PRIORITY));
+            builder.setPriority(json.getLong(SourceHeaderContract.PRIORITY));
         }
         if (!json.isNull(SourceHeaderContract.DEBUG_REPORTING)) {
-            result.setIsDebugReporting(json.optBoolean(SourceHeaderContract.DEBUG_REPORTING));
+            builder.setIsDebugReporting(json.optBoolean(SourceHeaderContract.DEBUG_REPORTING));
         }
         if (!json.isNull(SourceHeaderContract.DEBUG_KEY)) {
             try {
-                result.setDebugKey(
+                builder.setDebugKey(
                         new UnsignedLong(json.getString(SourceHeaderContract.DEBUG_KEY)));
             } catch (NumberFormatException e) {
                 LogUtil.e(e, "parseCommonSourceParams: parsing debug key failed");
@@ -183,9 +179,10 @@ public class AsyncSourceFetcher {
                             json.getLong(SourceHeaderContract.INSTALL_ATTRIBUTION_WINDOW_KEY),
                             MIN_INSTALL_ATTRIBUTION_WINDOW,
                             MAX_INSTALL_ATTRIBUTION_WINDOW);
-            result.setInstallAttributionWindow(TimeUnit.SECONDS.toMillis(installAttributionWindow));
+            builder.setInstallAttributionWindow(
+                    TimeUnit.SECONDS.toMillis(installAttributionWindow));
         } else {
-            result.setInstallAttributionWindow(
+            builder.setInstallAttributionWindow(
                     TimeUnit.SECONDS.toMillis(MAX_INSTALL_ATTRIBUTION_WINDOW));
         }
         if (!json.isNull(SourceHeaderContract.POST_INSTALL_EXCLUSIVITY_WINDOW_KEY)) {
@@ -194,9 +191,9 @@ public class AsyncSourceFetcher {
                             json.getLong(SourceHeaderContract.POST_INSTALL_EXCLUSIVITY_WINDOW_KEY),
                             MIN_POST_INSTALL_EXCLUSIVITY_WINDOW,
                             MAX_POST_INSTALL_EXCLUSIVITY_WINDOW);
-            result.setInstallCooldownWindow(TimeUnit.SECONDS.toMillis(installCooldownWindow));
+            builder.setInstallCooldownWindow(TimeUnit.SECONDS.toMillis(installCooldownWindow));
         } else {
-            result.setInstallCooldownWindow(
+            builder.setInstallCooldownWindow(
                     TimeUnit.SECONDS.toMillis(MIN_POST_INSTALL_EXCLUSIVITY_WINDOW));
         }
         // This "filter_data" field is used to generate reports.
@@ -206,8 +203,7 @@ public class AsyncSourceFetcher {
                 LogUtil.d("Source filter-data is invalid.");
                 return false;
             }
-            result.setFilterData(
-                    json.getJSONObject(SourceHeaderContract.FILTER_DATA).toString());
+            builder.setFilterData(json.getJSONObject(SourceHeaderContract.FILTER_DATA).toString());
         }
 
         Uri appUri = null;
@@ -215,9 +211,9 @@ public class AsyncSourceFetcher {
             appUri = Uri.parse(json.getString(SourceHeaderContract.DESTINATION));
             if (appUri.getScheme() == null) {
                 LogUtil.d("App destination is missing app scheme, adding.");
-                appUri = Uri.parse(mDefaultAndroidAppUriPrefix + appUri);
+                appUri = Uri.parse(DEFAULT_ANDROID_APP_URI_PREFIX + appUri);
             }
-            if (!mDefaultAndroidAppScheme.equals(appUri.getScheme())) {
+            if (!DEFAULT_ANDROID_APP_SCHEME.equals(appUri.getScheme())) {
                 LogUtil.e(
                         "Invalid scheme for app destination: %s; dropping the source.",
                         appUri.getScheme());
@@ -225,131 +221,137 @@ public class AsyncSourceFetcher {
             }
         }
 
-        if (shouldValidateDestinationWebSource
-                && appDestinationFromRequest != null // Only validate when non-null in request
-                && !appDestinationFromRequest.equals(appUri)) {
+        Set<String> allowedEnrollmentsString =
+                new HashSet<>(
+                        AllowLists.splitAllowList(
+                                mFlags.getMeasurementDebugJoinKeyEnrollmentAllowlist()));
+        if (allowedEnrollmentsString.contains(enrollmentId)
+                && !json.isNull(SourceHeaderContract.DEBUG_JOIN_KEY)) {
+            builder.setDebugJoinKey(json.optString(SourceHeaderContract.DEBUG_JOIN_KEY));
+        }
+
+        if (asyncRegistration.isWebRequest()
+                // Only validate when non-null in request
+                && asyncRegistration.getOsDestination() != null
+                && !asyncRegistration.getOsDestination().equals(appUri)) {
             LogUtil.d("Expected destination to match with the supplied one!");
             return false;
         }
 
         if (appUri != null) {
-            result.setAppDestinations(List.of(getBaseUri(appUri)));
+            builder.setAppDestinations(Collections.singletonList(getBaseUri(appUri)));
         }
 
-        if (shouldValidateDestinationWebSource
-                && webDestinationFromRequest != null // Only validate when non-null in request
-                && !doUriFieldsMatch(
-                        json, SourceHeaderContract.WEB_DESTINATION, webDestinationFromRequest)) {
-            LogUtil.d("Expected web_destination to match with the supplied one!");
+        boolean shouldMatchAtLeastOneWebDestination =
+                asyncRegistration.isWebRequest() && asyncRegistration.getWebDestination() != null;
+        boolean matchedOneWebDestination = false;
+
+        if (!json.isNull(SourceHeaderContract.WEB_DESTINATION)) {
+            Set<Uri> destinationSet = new HashSet<>();
+            JSONArray jsonDestinations;
+            Object obj = json.get(SourceHeaderContract.WEB_DESTINATION);
+            if (obj instanceof String) {
+                jsonDestinations = new JSONArray();
+                jsonDestinations.put(json.getString(SourceHeaderContract.WEB_DESTINATION));
+            } else {
+                jsonDestinations = json.getJSONArray(SourceHeaderContract.WEB_DESTINATION);
+            }
+            if (jsonDestinations.length() > MAX_DISTINCT_WEB_DESTINATIONS_IN_SOURCE_REGISTRATION) {
+                LogUtil.d("Source registration exceeded the number of allowed destinations.");
+                return false;
+            }
+            for (int i = 0; i < jsonDestinations.length(); i++) {
+                Uri destination = Uri.parse(jsonDestinations.getString(i));
+                if (shouldMatchAtLeastOneWebDestination
+                        && asyncRegistration.getWebDestination().equals(destination)) {
+                    matchedOneWebDestination = true;
+                }
+                Optional<Uri> topPrivateDomainAndScheme =
+                        Web.topPrivateDomainAndScheme(destination);
+                if (topPrivateDomainAndScheme.isEmpty()) {
+                    LogUtil.d("Unable to extract top private domain and scheme from web "
+                            + "destination.");
+                    return false;
+                } else {
+                    destinationSet.add(topPrivateDomainAndScheme.get());
+                }
+            }
+            List<Uri> destinationList = new ArrayList<>(destinationSet);
+            builder.setWebDestinations(destinationList);
+        }
+
+        if (shouldMatchAtLeastOneWebDestination && !matchedOneWebDestination) {
+            LogUtil.d("Expected at least one web_destination to match with the supplied one!");
             return false;
         }
-        if (!json.isNull(SourceHeaderContract.WEB_DESTINATION)) {
-            Uri webDestination = Uri.parse(json.getString(SourceHeaderContract.WEB_DESTINATION));
-            Optional<Uri> topPrivateDomainAndScheme = Web.topPrivateDomainAndScheme(webDestination);
-            if (!topPrivateDomainAndScheme.isPresent()) {
-                LogUtil.d("Unable to extract top private domain and scheme from web destination.");
-                return false;
-            } else {
-                result.setWebDestinations(List.of(topPrivateDomainAndScheme.get()));
-            }
-        }
-        if (shouldOverrideDestinationAppSource && !isWebSource
-                && appDestinationFromRequest != null) {
-            result.setAppDestinations(List.of(appDestinationFromRequest));
-        }
+
         return true;
     }
 
     /** Parse a {@code Source}, given response headers, adding the {@code Source} to a given list */
     @VisibleForTesting
-    public boolean parseSource(
-            @NonNull String registrationId,
-            @NonNull Uri publisher,
-            @NonNull String enrollmentId,
-            @Nullable Uri appDestination,
-            @Nullable Uri webDestination,
-            @Nullable Uri registrant,
-            long eventTime,
-            @NonNull Source.SourceType sourceType,
-            boolean shouldValidateDestinationWebSource,
-            boolean shouldOverrideDestinationAppSource,
-            @NonNull Map<String, List<String>> headers,
-            @NonNull List<Source> sources,
-            boolean isWebSource,
-            boolean adIdPermission,
-            boolean arDebugPermission) {
-        Source.Builder result = new Source.Builder();
-        result.setRegistrationId(registrationId);
-        result.setPublisher(publisher);
-        result.setEnrollmentId(enrollmentId);
-        result.setRegistrant(registrant);
-        result.setSourceType(sourceType);
-        result.setAttributionMode(Source.AttributionMode.TRUTHFULLY);
-        result.setEventTime(eventTime);
-        result.setAdIdPermission(adIdPermission);
-        result.setArDebugPermission(arDebugPermission);
-        result.setEventTime(eventTime);
-        result.setPublisherType(isWebSource ? EventSurfaceType.WEB : EventSurfaceType.APP);
-        List<String> field = headers.get("Attribution-Reporting-Register-Source");
+    public Optional<Source> parseSource(
+            AsyncRegistration asyncRegistration,
+            String enrollmentId,
+            Map<String, List<String>> headers,
+            AsyncFetchStatus asyncFetchStatus) {
+        Source.Builder builder = new Source.Builder();
+        builder.setRegistrationId(asyncRegistration.getRegistrationId());
+        builder.setPublisher(getBaseUri(asyncRegistration.getTopOrigin()));
+        builder.setEnrollmentId(enrollmentId);
+        builder.setRegistrant(asyncRegistration.getRegistrant());
+        builder.setSourceType(asyncRegistration.getSourceType());
+        builder.setAttributionMode(Source.AttributionMode.TRUTHFULLY);
+        builder.setEventTime(asyncRegistration.getRequestTime());
+        builder.setAdIdPermission(asyncRegistration.hasAdIdPermission());
+        builder.setArDebugPermission(asyncRegistration.getDebugKeyAllowed());
+        builder.setPublisherType(
+                asyncRegistration.isWebRequest() ? EventSurfaceType.WEB : EventSurfaceType.APP);
+        List<String> field =
+                headers.get(SourceHeaderContract.HEADER_ATTRIBUTION_REPORTING_REGISTER_SOURCE);
         if (field == null || field.size() != 1) {
             LogUtil.d(
                     "AsyncSourceFetcher: "
                             + "Invalid Attribution-Reporting-Register-Source header.");
-            return false;
+            asyncFetchStatus.setEntityStatus(AsyncFetchStatus.EntityStatus.HEADER_ERROR);
+            return Optional.empty();
         }
         try {
             JSONObject json = new JSONObject(field.get(0));
             boolean isValid =
-                    parseCommonSourceParams(
-                            json,
-                            sourceType,
-                            appDestination,
-                            webDestination,
-                            eventTime,
-                            shouldValidateDestinationWebSource,
-                            shouldOverrideDestinationAppSource,
-                            result,
-                            isWebSource);
+                    parseCommonSourceParams(json, asyncRegistration, builder, enrollmentId);
             if (!isValid) {
-                return false;
+                asyncFetchStatus.setEntityStatus(AsyncFetchStatus.EntityStatus.VALIDATION_ERROR);
+                return Optional.empty();
             }
             if (!json.isNull(SourceHeaderContract.AGGREGATION_KEYS)) {
                 if (!areValidAggregationKeys(
                         json.getJSONObject(SourceHeaderContract.AGGREGATION_KEYS))) {
-                    return false;
+                    asyncFetchStatus.setEntityStatus(
+                            AsyncFetchStatus.EntityStatus.VALIDATION_ERROR);
+                    return Optional.empty();
                 }
-                result.setAggregateSource(json.getString(SourceHeaderContract.AGGREGATION_KEYS));
+                builder.setAggregateSource(json.getString(SourceHeaderContract.AGGREGATION_KEYS));
             }
             if (mFlags.getMeasurementEnableXNA()
                     && !json.isNull(SourceHeaderContract.SHARED_AGGREGATION_KEYS)) {
                 // Parsed as JSONArray for validation
                 JSONArray sharedAggregationKeys =
                         json.getJSONArray(SourceHeaderContract.SHARED_AGGREGATION_KEYS);
-                result.setSharedAggregationKeys(sharedAggregationKeys.toString());
+                builder.setSharedAggregationKeys(sharedAggregationKeys.toString());
             }
-            sources.add(result.build());
-            return true;
+            asyncFetchStatus.setEntityStatus(AsyncFetchStatus.EntityStatus.SUCCESS);
+            return Optional.of(builder.build());
         } catch (JSONException | NumberFormatException e) {
             LogUtil.d(e, "AsyncSourceFetcher: Invalid JSON");
-            return false;
+            asyncFetchStatus.setEntityStatus(AsyncFetchStatus.EntityStatus.PARSING_ERROR);
+            return Optional.empty();
         }
     }
 
-    private static boolean hasRequiredParams(JSONObject json, boolean shouldValidateDestinations) {
-        boolean isDestinationAvailable = !json.isNull(SourceHeaderContract.DESTINATION);
-        if (shouldValidateDestinations) {
-            isDestinationAvailable |= !json.isNull(SourceHeaderContract.WEB_DESTINATION);
-        }
-        return isDestinationAvailable;
-    }
-
-    private static boolean doUriFieldsMatch(JSONObject json, String fieldName, Uri expectedValue)
-            throws JSONException {
-        if (json.isNull(fieldName) && expectedValue == null) {
-            return true;
-        }
-        return !json.isNull(fieldName)
-                && Objects.equals(expectedValue, Uri.parse(json.getString(fieldName)));
+    private static boolean hasRequiredParams(JSONObject json) {
+        return !json.isNull(SourceHeaderContract.DESTINATION)
+                || !json.isNull(SourceHeaderContract.WEB_DESTINATION);
     }
 
     /** Provided a testing hook. */
@@ -366,137 +368,76 @@ public class AsyncSourceFetcher {
      * @param asyncFetchStatus a {@link AsyncFetchStatus}, stores Ad Tech server status.
      */
     public Optional<Source> fetchSource(
-            @NonNull AsyncRegistration asyncRegistration,
-            @NonNull AsyncFetchStatus asyncFetchStatus,
+            AsyncRegistration asyncRegistration,
+            AsyncFetchStatus asyncFetchStatus,
             AsyncRedirect asyncRedirect) {
-        List<Source> out = new ArrayList<>();
-        fetchSource(
-                asyncRegistration.getId(),
-                asyncRegistration.getTopOrigin(),
-                asyncRegistration.getRegistrationUri(),
-                asyncRegistration.getOsDestination(),
-                asyncRegistration.getWebDestination(),
-                asyncRegistration.getRegistrant(),
-                asyncRegistration.getRequestTime(),
-                asyncRegistration.getType() == AsyncRegistration.RegistrationType.WEB_SOURCE,
-                asyncRegistration.getRedirectType() != AsyncRegistration.RedirectType.ANY,
-                asyncRegistration.getSourceType(),
-                out,
-                asyncRegistration.shouldProcessRedirects(),
-                asyncRegistration.getRedirectType(),
-                asyncRedirect,
-                asyncRegistration.getType() == AsyncRegistration.RegistrationType.WEB_SOURCE,
-                asyncFetchStatus,
-                asyncRegistration.hasAdIdPermission(),
-                asyncRegistration.getDebugKeyAllowed());
-        if (out.isEmpty()) {
-            return Optional.empty();
-        } else {
-            return Optional.of(out.get(0));
-        }
-    }
-
-    private void fetchSource(
-            @NonNull String registrationId,
-            @NonNull Uri publisher,
-            @NonNull Uri registrationUri,
-            @Nullable Uri appDestination,
-            @Nullable Uri webDestination,
-            @Nullable Uri registrant,
-            long eventTime,
-            boolean shouldValidateDestinationWebSource,
-            boolean shouldOverrideDestinationAppSource,
-            @NonNull Source.SourceType sourceType,
-            @NonNull List<Source> sourceOut,
-            boolean shouldProcessRedirects,
-            @AsyncRegistration.RedirectType int redirectType,
-            @NonNull AsyncRedirect asyncRedirect,
-            boolean isWebSource,
-            @Nullable AsyncFetchStatus asyncFetchStatus,
-            boolean adIdPermission,
-            boolean arDebugPermission) {
-        // Require https.
-        if (!registrationUri.getScheme().equals("https")) {
-            asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.PARSING_ERROR);
-            return;
-        }
-        URL url;
+        HttpURLConnection urlConnection = null;
+        Map<String, List<String>> headers;
+        // TODO(b/276825561): Fix code duplication between fetchSource & fetchTrigger request flow
         try {
-            url = new URL(registrationUri.toString());
-        } catch (MalformedURLException e) {
-            LogUtil.d(e, "Malformed registration target URL");
-            return;
-        }
-        Optional<String> enrollmentId =
-                Enrollment.maybeGetEnrollmentId(registrationUri, mEnrollmentDao);
-        if (!enrollmentId.isPresent()) {
-            asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.INVALID_ENROLLMENT);
-            LogUtil.d(
-                    "fetchSource: unable to find enrollment ID. Registration URI: %s",
-                    registrationUri);
-            return;
-        }
-        HttpURLConnection urlConnection;
-        try {
-            urlConnection = (HttpURLConnection) openUrl(url);
-        } catch (IOException e) {
-            asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
-            LogUtil.e(e, "Failed to open registration target URL");
-            return;
-        }
-        try {
+            urlConnection =
+                    (HttpURLConnection)
+                            openUrl(new URL(asyncRegistration.getRegistrationUri().toString()));
             urlConnection.setRequestMethod("POST");
             urlConnection.setRequestProperty(
-                    "Attribution-Reporting-Source-Info", sourceType.toString());
+                    SourceRequestContract.SOURCE_INFO,
+                    asyncRegistration.getSourceType().toString());
             urlConnection.setInstanceFollowRedirects(false);
-            Map<String, List<String>> headers = urlConnection.getHeaderFields();
+            headers = urlConnection.getHeaderFields();
             FetcherUtil.emitHeaderMetrics(
                     mFlags,
                     mLogger,
                     AD_SERVICES_MEASUREMENT_REGISTRATIONS__TYPE__SOURCE,
                     headers,
-                    registrationUri);
+                    asyncRegistration.getRegistrationUri());
             int responseCode = urlConnection.getResponseCode();
+            LogUtil.d("Response code = " + responseCode);
             if (!FetcherUtil.isRedirect(responseCode) && !FetcherUtil.isSuccess(responseCode)) {
-                asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SERVER_UNAVAILABLE);
-                return;
+                asyncFetchStatus.setResponseStatus(
+                        AsyncFetchStatus.ResponseStatus.SERVER_UNAVAILABLE);
+                return Optional.empty();
             }
-            asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
-            final boolean parsed =
-                    parseSource(
-                            registrationId,
-                            publisher,
-                            enrollmentId.get(),
-                            appDestination,
-                            webDestination,
-                            registrant,
-                            eventTime,
-                            sourceType,
-                            shouldValidateDestinationWebSource,
-                            shouldOverrideDestinationAppSource,
-                            headers,
-                            sourceOut,
-                            isWebSource,
-                            adIdPermission,
-                            arDebugPermission);
-            if (!parsed) {
-                asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.PARSING_ERROR);
-                LogUtil.d("Failed to parse");
-                return;
-            }
-            if (shouldProcessRedirects) {
-                AsyncRedirect redirectsAndType = FetcherUtil.parseRedirects(headers, redirectType);
-                asyncRedirect.addToRedirects(redirectsAndType.getRedirects());
-                asyncRedirect.setRedirectType(redirectsAndType.getRedirectType());
-            } else {
-                asyncRedirect.setRedirectType(redirectType);
-            }
+            asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.SUCCESS);
+        } catch (MalformedURLException e) {
+            LogUtil.d(e, "Malformed registration target URL");
+            asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.INVALID_URL);
+            return Optional.empty();
         } catch (IOException e) {
-            asyncFetchStatus.setStatus(AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
             LogUtil.e(e, "Failed to get registration response");
+            asyncFetchStatus.setResponseStatus(AsyncFetchStatus.ResponseStatus.NETWORK_ERROR);
+            return Optional.empty();
         } finally {
-            urlConnection.disconnect();
+            if (urlConnection != null) {
+                urlConnection.disconnect();
+            }
         }
+
+        if (asyncRegistration.shouldProcessRedirects()) {
+            FetcherUtil.parseRedirects(headers).forEach(asyncRedirect::addToRedirects);
+        }
+
+        if (!isSourceHeaderPresent(headers)) {
+            asyncFetchStatus.setEntityStatus(AsyncFetchStatus.EntityStatus.HEADER_MISSING);
+            return Optional.empty();
+        }
+
+        Optional<String> enrollmentId =
+                Enrollment.maybeGetEnrollmentId(
+                        asyncRegistration.getRegistrationUri(), mEnrollmentDao);
+        if (enrollmentId.isEmpty()) {
+            LogUtil.d(
+                    "fetchTrigger: unable to find enrollment ID. Registration URI: %s",
+                    asyncRegistration.getRegistrationUri());
+            asyncFetchStatus.setEntityStatus(AsyncFetchStatus.EntityStatus.INVALID_ENROLLMENT);
+            return Optional.empty();
+        }
+
+        return parseSource(asyncRegistration, enrollmentId.get(), headers, asyncFetchStatus);
+    }
+
+    private boolean isSourceHeaderPresent(Map<String, List<String>> headers) {
+        return headers.containsKey(
+                SourceHeaderContract.HEADER_ATTRIBUTION_REPORTING_REGISTER_SOURCE);
     }
 
     private boolean areValidAggregationKeys(JSONObject aggregationKeys) {
@@ -527,6 +468,8 @@ public class AsyncSourceFetcher {
     }
 
     private interface SourceHeaderContract {
+        String HEADER_ATTRIBUTION_REPORTING_REGISTER_SOURCE =
+                "Attribution-Reporting-Register-Source";
         String SOURCE_EVENT_ID = "source_event_id";
         String DEBUG_KEY = "debug_key";
         String DESTINATION = "destination";
@@ -541,5 +484,10 @@ public class AsyncSourceFetcher {
         String AGGREGATION_KEYS = "aggregation_keys";
         String SHARED_AGGREGATION_KEYS = "shared_aggregation_keys";
         String DEBUG_REPORTING = "debug_reporting";
+        String DEBUG_JOIN_KEY = "debug_join_key";
+    }
+
+    private interface SourceRequestContract {
+        String SOURCE_INFO = "Attribution-Reporting-Source-Info";
     }
 }
